updated docs and tests

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 [metadata]
 name = ffmpegio-plugin-static-ffmpeg
 version = attr: ffmpegio_plugin_static_ffmpeg.__version__
-description = ffmpegio finder plugin to use static-ffmpeg executable from static-ffmpeg package
+description = ffmpegio finder plugin to use FFmpeg executables from static-ffmpeg package
 long_description_content_type = text/x-rst
 long_description = file: README.rst
 keywords = multimedia, ffmpeg
