--- a/.github/workflows/test_n_pub.yml
+++ b/.github/workflows/test_n_pub.yml
@@ -13,23 +13,9 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        python-version: [3.7, 3.8, 3.9, "3.10"]
-        os: [ubuntu-latest, macos-latest, windows-latest]
-        # python-version: [3.7, 3.8, 3.9]
-        # os: [windows-latest]
-        exclude:
-          - os: macos-latest
-            python-version: 3.7
-          - os: windows-latest
-            python-version: 3.7
-          - os: macos-latest
-            python-version: 3.8
-          - os: windows-latest
-            python-version: 3.8
-          - os: macos-latest
-            python-version: 3.9
-          - os: windows-latest
-            python-version: 3.9
+        python-version: ["3.10"]
+        os: [macos-latest, windows-latest]
+        # os: [ubuntu-latest, macos-latest, windows-latest]
 
     steps:
       - run: echo ${{github.ref}}
@@ -44,11 +30,13 @@ jobs:
 
       - name: Setup Python dependencies
         run: |
-          python -m pip install -U pip
-          pip install -U build pytest pytest-github-actions-annotate-failures 
+          python -m pip install -U pip setuptools wheel 
+          pip install -r requirements.txt
 
-      - name: Install ffmpegio-plugin-static-ffmpeg package
-        run: pip install -q .
+      - name: Install ffmpegio-plugin-downloader package
+        run: |
+          pip install -q .
+          pip list
 
       - name: Run tests
         run: pytest -vv
@@ -68,8 +56,7 @@ jobs:
 
       - name: Setup Python dependencies
         run: |
-          python -m pip install -U pip setuptools
-          pip install -U build
+          python -m pip install -U pip setuptools wheel build
 
       - name: Build a binary wheel and a source tarball
         run: python -m build --sdist --wheel --outdir dist/ .
@@ -89,6 +76,9 @@ jobs:
       #     skip_existing: true
 
       - name: Publish distribution 📦 to PyPI
+        env:
+          PYPI_API_TOKEN: ${{ secrets.PYPI_API_TOKEN }}
+        if: env.PYPI_API_TOKEN != null
         uses: pypa/gh-action-pypi-publish@master
         with:
           password: ${{ secrets.PYPI_API_TOKEN }}
