--- a/.github/workflows/test_n_pub.yml
+++ b/.github/workflows/test_n_pub.yml
@@ -14,8 +14,7 @@ jobs:
     strategy:
       matrix:
         python-version: ["3.10"]
-        os: [macos-latest, windows-latest]
-        # os: [ubuntu-latest, macos-latest, windows-latest]
+        os: [ubuntu-latest, macos-latest, windows-latest]
 
     steps:
       - run: echo ${{github.ref}}
